<resources>
    <string name="app_name">notes</string>
    <string name="action_user">User</string>
    <string name="action_search">Search</string>
    <string name="action_upload_sync">Upload sync</string>
    <string name="action_download_sync">Download sync</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_view_note">ViewNoteActivity</string>

    <string name="datetime_format">MMM dd, yyyy,    HH:mm</string>
    <string name="type_note_hint">Type your note here…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_username_hint">Username…</string>
    <string name="auth_password_hint">Password…</string>
    <string name="auth_repeat_password_hint">Repeat password…</string>
    <string name="auth_signin_button_name">Sign In</string>
    <string name="auth_signin_to_signup_button_name">sign up</string>
    <string name="auth_signup_to_signin_button_name">sign in</string>
    <string name="auth_signup_button_name">Sign Up</string>

    <string name="auth_error_empty_username">Empty Username</string>
    <string name="auth_error_long_username">Username Too Long (max 20 symbols)</string>
    <string name="auth_error_short_password">Password Too Short (min 4 symbols)</string>
    <string name="auth_error_long_password">Password Too Long (max 30 symbols)</string>
    <string name="auth_error_password_match">Password confirmation does not match password</string>

    <string name="protocol">http://</string>
    <string name="socket">10.0.2.2:8080</string>
    <string name="url_signup">%1$s%2$s/api/auth/signup</string>
    <string name="url_signin">%1$s%2$s/api/auth/signin</string>
    <string name="url_extend_token">%1$s%2$s/api/auth/extend</string>
    <string name="url_user_data">%1$s%2$s/api/user/current</string>
    <string name="url_upload_sync">%1$s%2$s/api/notes/upload_sync</string>
    <string name="url_all_notes">%1$s%2$s/api/notes/all</string>

    <string name="bad_request_signin_error_message">Username or password incorrect</string>
    <string name="bad_request_signup_error_message">Username already taken</string>

    <string name="default_network_error_message">Unknown network or server error</string>

    <string name="user_data_dialog_title">User data</string>
    <string name="user_data_dismiss_button">Close</string>
    <string name="user_data_logout_button">Log out</string>

    <string name="username_line_text">Username: %1$s</string>

    <string name="action_delete_note">Delete</string>

    <string name="upload_sync_alert">Changes made on other devices may be lost! Do you want to proceed?</string>
    <string name="download_sync_alert">Changes made on this device may be lost! Do you want to proceed?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="no_go_back_auth">Signing in is mandatory</string>
</resources>